# daily-tasker

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
daily_tasker/: __init__.py
daily_tasker/config/: __init__.py  adapter.py  loader.py  models.py
daily_tasker/core/: __init__.py  base_site.py  browser_client.py  http_client.py
daily_tasker/resources/templates/: site_accounts.toml  site_config.toml
daily_tasker/utils/: __init__.py  cache.py  constants.py  cookies.py  logger.py  session_helper.py
docs/: develop.md
